Add exhaustive approx material

--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -65,6 +65,8 @@ Here you will find a listing of lesson materials for the course such as slides, 
 ## W5. Numerical Programming
 
 - **Numerical Programs**
-  - [HTML](4_numerical_programs_solutions.html) Slides
+  - [HTML](5_numerical_programs_solutions.html) Slides
+- **Exhaustive and Approximate Solutions**
+  - [HTML](5_exhaustive_approximation.html) Slides
 
 ---
