--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -70,5 +70,7 @@ Here you will find a listing of lesson materials for the course such as slides, 
   - [HTML](5_exhaustive_approximation.html) Slides
 - **Activity 04**: Numerical Programming and Exhaustive Search
   - [GitHub Classroom Link](https://classroom.github.com/a/PjByMoX6)
+- **Lab 04**: Build Your Own Game of *Rock, Paper, Scissors*!
+  - [GitHub Classroom Link](https://classroom.github.com/a/KqaKW0-E)
 
 ---
